Ajustes en el Modulo de Barberias

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,3 +36,5 @@ en:
     new:
       title: "Create BarberShops"
       information: "Information to BarberShops"
+    show:
+        title: "Show BarberShops"
