--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -287,6 +287,7 @@ es:
       code: "Código"
       description: "Descripción"
       enable: "Habilitado"
+      barber_shops: "Pertenece a Barberia"
 
       index:
         title: "Listado de Lineas"
